apps/production/snapcast/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: snapcast
  annotations:
    lbipam.cilium.io/ip-pool: home-compute-pool
    lbipam.cilium.io/ips: 10.42.2.37
